--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
   "prefer-stable": true,
   "minimum-stability": "dev",
   "require": {
-    "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
-    "pimcore/pimcore": "^11.0"
+    "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
+    "pimcore/pimcore": "^11.0 || 12.x-dev"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
