--- a/.github/workflows/studio-frontend-build.yaml
+++ b/.github/workflows/studio-frontend-build.yaml
@@ -47,18 +47,10 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-      - name: Fetch pimcore studio npm package archive 
-        working-directory: ./assets/studio
-        run: curl -o pimcore-studio-ui-bundle-0.0.1.tgz https://raw.githubusercontent.com/pimcore/studio-ui-bundle/v0.5.20/public/build/studio-npm-package.tgz
 
       - name: Install dependencies
         working-directory: ./assets/studio
         run: npm ci
-
-      - name: Install studio npm package
-        working-directory: ./assets/studio
-        run: npm install pimcore-studio-ui-bundle-0.0.1.tgz
-
 
   lint:
     needs: install
@@ -95,8 +87,8 @@ jobs:
         with:
             commit_message: Apply eslint-fixer changes
 
-  build:
-    needs: lint
+  check-types:
+    needs: install
     runs-on: ubuntu-latest
 
     permissions:
@@ -121,13 +113,39 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-      - name: Fetch pimcore studio npm package archive 
-        working-directory: ./assets/studio
-        run: curl -o pimcore-studio-ui-bundle-0.0.1.tgz https://raw.githubusercontent.com/pimcore/studio-ui-bundle/v0.5.20/public/build/studio-npm-package.tgz
 
-      - name: Install studio npm package
+      - name: Run code linting
         working-directory: ./assets/studio
-        run: npm install pimcore-studio-ui-bundle-0.0.1.tgz
+        run: npm run check-types
+
+  build:
+    needs: 
+      - lint
+      - check-types
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Cache npm dependencies
+        uses: actions/cache@v4
+        with:
+          path: ./assets/studio/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Run production build
         working-directory: ./assets/studio
